--- a/Anna_KaRNNa_Exercises.ipynb
+++ b/Anna_KaRNNa_Exercises.ipynb
@@ -168,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {
     "collapsed": true
    },
@@ -185,20 +185,21 @@
     "       n_steps: Number of sequence steps per batch\n",
     "    '''\n",
     "    # Get the number of characters per batch and number of batches we can make\n",
-    "    characters_per_batch = \n",
-    "    n_batches = \n",
+    "    batch_size = n_seqs * n_steps\n",
+    "    n_batches = len(arr) // batch_size\n",
     "    \n",
     "    # Keep only enough characters to make full batches\n",
-    "    arr = \n",
+    "    arr = arr[:n_batches * batch_size]\n",
     "    \n",
     "    # Reshape into n_seqs rows\n",
-    "    arr = \n",
+    "    arr = arr.reshape((n_seqs, -1))\n",
     "    \n",
     "    for n in range(0, arr.shape[1], n_steps):\n",
     "        # The features\n",
-    "        x = \n",
+    "        x = arr[:, n:n+n_steps]\n",
     "        # The targets, shifted by one\n",
-    "        y = \n",
+    "        y = np.zeros_like(x)\n",
+    "        y[:, :-1], y[:, -1] = x[:, 1:], x[:, 0]\n",
     "        yield x, y"
    ]
   },
@@ -211,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {
     "collapsed": true
    },
@@ -223,11 +224,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {
-    "collapsed": true
-   },
-   "outputs": [],
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "x\n",
+      " [[70 47 11 36 57 48  3 13 43 50]\n",
+      " [13 11 19 13 22 29 57 13 25 29]\n",
+      " [55 49 22 69 50 50 46 54 48 56]\n",
+      " [22 13 45 42  3 49 22 25 13 47]\n",
+      " [13 49 57 13 49 56 81 13 56 49]\n",
+      " [13  2 57 13 44 11 56 50 29 22]\n",
+      " [47 48 22 13 28 29 19 48 13 27]\n",
+      " [16 13 18 42 57 13 22 29 44 13]\n",
+      " [57 13 49 56 22 17 57 69 13 59]\n",
+      " [13 56 11 49 45 13 57 29 13 47]]\n",
+      "\n",
+      "y\n",
+      " [[47 11 36 57 48  3 13 43 50 50]\n",
+      " [11 19 13 22 29 57 13 25 29 49]\n",
+      " [49 22 69 50 50 46 54 48 56 81]\n",
+      " [13 45 42  3 49 22 25 13 47 49]\n",
+      " [49 57 13 49 56 81 13 56 49  3]\n",
+      " [ 2 57 13 44 11 56 50 29 22 15]\n",
+      " [48 22 13 28 29 19 48 13 27 29]\n",
+      " [13 18 42 57 13 22 29 44 13 56]\n",
+      " [13 49 56 22 17 57 69 13 59 47]\n",
+      " [56 11 49 45 13 57 29 13 47 48]]\n"
+     ]
+    }
+   ],
    "source": [
     "print('x\\n', x[:10, :10])\n",
     "print('\\ny\\n', y[:10, :10])"
@@ -286,7 +315,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {
     "collapsed": true
    },
@@ -302,11 +331,11 @@
     "        \n",
     "    '''\n",
     "    # Declare placeholders we'll feed into the graph\n",
-    "    inputs = \n",
-    "    targets = \n",
+    "    inputs = tf.placeholder(tf.int32, [batch_size, num_steps], name='inputs')\n",
+    "    targets = tf.placehoder(tf.int32, [batch_size, num_steps], name='targets')\n",
     "    \n",
     "    # Keep probability placeholder for drop out layers\n",
-    "    keep_prob = \n",
+    "    keep_prob = tf.placehoder(tf.float32, name='keep_prob')\n",
     "    \n",
     "    return inputs, targets, keep_prob"
    ]
@@ -349,7 +378,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {
     "collapsed": true
    },
@@ -368,14 +397,14 @@
     "    '''\n",
     "    ### Build the LSTM Cell\n",
     "    # Use a basic LSTM cell\n",
-    "    lstm = \n",
+    "    lstm = tf.contrib.rnn.BasicLSTMCell(lstm_size)\n",
     "    \n",
     "    # Add dropout to the cell outputs\n",
-    "    drop = \n",
+    "    drop = tf.contrib.rnn.DropoutWrapper(lstm, output_keep_prob=keep_prob)\n",
     "    \n",
     "    # Stack up multiple LSTM layers, for deep learning\n",
-    "    cell = \n",
-    "    initial_state = \n",
+    "    cell = tf.contrib.rnn.MultiRNNCell([drop] * num_layers)\n",
+    "    initial_state = cell.zero_state(batch_size, tf.float32)\n",
     "    \n",
     "    return cell, initial_state"
    ]
